[package]
name = "drogue-grove-uart-spi"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An implementation of Grove's SPI over UART protocol"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-grove-uart-spi"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std"]
keywords = ["driver", "spi", "uart", "grove", "no_std"]

[dependencies]
embedded-hal = "0.2"
nb = "1"
log = "0.4"

[dev-dependencies]
rtt-target = { version = "0.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

cortex-m = { version = "0.6" }
cortex-m-rt = { version = "0.6" }
cortex-m-rtic = "0.5"

stm32f4 = { version = "0.11", features = ["stm32f411", "rt"] }
stm32f4xx-hal = { version = "0.8", features = ["stm32f411", "rt"] }

stm32f7 = { version = "0.11", features = ["stm32f7x3", "rt"] }
stm32f7xx-hal = { version = "0.2", features = ["stm32f723", "rt"] }

sx127x_lora = { version = "0.3" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
stm32f4xx = []
stm32f7xx = []
dump = []
